# routes/auth.js
@@ -1,35 +1,49 @@
 const CustomError = require('../types/customError')
-const { grabConfig } = require('../config/readConfig');
-const hostLocker = require('host-locker');
+const { grabConfig } = require('../config/readConfig')
+const hostLocker = require('host-locker')
 const hl = new hostLocker({
-    maxCallThreshold: 5,
-    secondsThreshold: 5,
-    allowedHosts: ['localhost']
-});
+  maxCallThreshold: 10,
+  secondsThreshold: 5,
+  allowedHosts: ['localhost']
+})
+const allowedKeys = process.env.ALLOWED_KEYS.split(',')
+const publicKey = process.env.PUBLIC_KEY
+const { URL } = require('url')
+const configData = grabConfig()
 
-const { parse } = require('url');
 
-const configData = grabConfig();
 
+/** Decodes and validates Basic Authentication credentials.
+ * @param {string} encodedCredentials - The encoded credentials in the format 'Basic base64(username:password)'.
+ * @throws {CustomError} Throws a CustomError with a 401 status if authentication fails.
+ * @returns {Promise<boolean>} Returns a Promise that resolves to true if authentication is successful.
+ */
 const decodeAuth = async (encodedCredentials) => {
-    if (!encodedCredentials) {
-        throw new CustomError('Authentication failed', 401);
-    }
-    const encodedCredentialSplit = encodedCredentials.split(' ')
-    if (!encodedCredentialSplit[1]) {
-        throw new CustomError('use base64Credentials', 401);
-    }
-    const base64Credentials = encodedCredentials.split(' ')[1];
-    const decodedCredentials = Buffer.from(base64Credentials, 'base64').toString('utf-8');
-    const [decodedUsername, decodedPassword] = decodedCredentials.split(':');
+  if (!encodedCredentials) {
+    throw new CustomError('Authentication failed', 401)
+  }
+  const [authType, base64Credentials] = encodedCredentials.split(' ')
+
+  console.log(authType)
+  console.log(base64Credentials)
+
+  if (authType !== 'Basic' || !base64Credentials) {
+    throw new CustomError('Use Basic Authentication', 401)
+  }
+
+  if (base64Credentials !== 'SWAGGER') {
+    const decodedCredentials = Buffer.from(base64Credentials, 'base64').toString('utf-8')
+    const [decodedUsername, decodedPassword] = decodedCredentials.split(':')
 
     // Check the values
-    console.log('Decoded Username:', decodedUsername);
-    console.log('Decoded Password:', decodedPassword);
+    console.log('Decoded Username:', decodedUsername)
+    console.log('Decoded Password:', decodedPassword)
 
-    if (decodedUsername !== 'test' || decodedPassword !== '123'){
-      //  throw new CustomError('Authentication failed', 401);
+    if (decodedUsername !== 'sds-parser' || decodedPassword !== '9T21IFCoJzU4NyR759OQ3zwvMvhMP49R') {
+      throw new CustomError('Authentication failed', 401)
     }
+  }
+  return true
 }
 
 /**
@@ -38,15 +52,15 @@ const decodeAuth = async (encodedCredentials) => {
  * @param {*} next
  */
 exports.host = async (req, res, next) => {
-    const host = req.get('Host');
-    const { hostname } = parse(`http://${host}`);
+  const host = req.get('Host')
+  const { hostname } = new URL(`http://${host}`)
 
-    if (!hl.check(hostname)) {
-        res.status(403).json({ status: 403, auth: 'access denied' });
-        return
-    }
-    next();
-};
+  if (!hl.check(hostname)) {
+    res.status(403).json({ status: 403, auth: 'access denied' }) //Too many requestst
+    return
+  }
+  next();
+}
 
 /**
  * @param {request} req - The request object from the API.
@@ -54,19 +68,37 @@ exports.host = async (req, res, next) => {
  * @param {*} next
  */
 exports.auth = async (req, res, next) => {
-    try {
-        if (!req.headers || !req.headers.authorization) {
-            throw new CustomError('Authentication failed', 401); // Unauthorized status code
-        }
-        const encodedCredentials = req.headers.authorization;
-        await decodeAuth(encodedCredentials)
-        next();
-    } catch (err) {
-        console.log(err)
-        const status = err.status || 500
-        res.status(err.status || 500).json({ status, auth: false, error: err.message });
+  try {
+    let auth = false
+    const incomingApiKey = req.headers['x-api-key']
+    const incomingAuth = req.headers.authorization
+
+    if (incomingApiKey) {
+      switch (true) {
+        case allowedKeys.includes(incomingApiKey):
+          auth = true
+          break
+        case (incomingApiKey === publicKey):
+          auth = true
+          req.public = true
+          break
+      }
     }
-};
+
+    if (incomingAuth && !incomingApiKey) {
+      auth = await decodeAuth(incomingAuth)
+    }
+
+    if (!auth) {
+      throw new CustomError('Authentication failed', 401) // Unauthorized status code
+    }
+    next()
+  } catch (err) {
+    console.log(err)
+    const status = err.status || 500
+    res.status(err.status || 500).json({ status, auth: false, error: err.message })
+  }
+}
 
 /**
  * @param {request} req - The request object from the API.
@@ -74,39 +106,53 @@ exports.auth = async (req, res, next) => {
  * @param {*} next
  */
 exports.service = async (req, res, next) => {
-    try {
-        const urlParts = req.url.split('/'); //CHECK ALL REQ !!!!!!!!!!!!!!!
-        const request = urlParts[1];
-        let authService = {} //Authenticated Service Route
-        const contentRoute = configData.routes.find(route => route.path === request);
+  try {
+    const pathname = req._parsedUrl.pathname
+    const urlParts = pathname.split('/')
+    const request = urlParts[1]
+    let authService = {} // Authenticated Service Route
+    const contentRoute = configData.routes.find(route => route.path === request)
 
-        if (!contentRoute) {
-            throw new CustomError('request Missing', 401); // Unauthorized status code
-        }
-
-        if (urlParts[2] && contentRoute.services[urlParts[2]]) {
-            console.log('many', contentRoute.services[urlParts[2]])
-            authService = contentRoute.services[urlParts[2]]
-        }
-
-        if (contentRoute.services && !urlParts[2]) {
-            //console.log('one', contentRoute.services.def)
-            authService = contentRoute.services.def
-        }
-
-        if (!authService) {
-            throw new CustomError('request Missing', 401); // Unauthorized status code
-        }
-
-        if (authService.title) req.title = authService.title;
-        req.curl = authService.curl || false;
-        req.command = authService.command || false;
-        req.service = authService.serviceInstance || 'axios';
-        req.transformations = authService.transformations || {};
-        next();
-    } catch (err) {
-        console.log(err)
-        const status = err.status || 500
-        res.status(err.status || 500).json({ status, auth: false, error: err.message });
+    if (!contentRoute) {
+      throw new CustomError('request Missing', 401) // Unauthorized status code
     }
+
+    if (urlParts[2] && contentRoute.services[urlParts[2]]) {
+      console.log('many', contentRoute.services[urlParts[2]])
+      authService = contentRoute.services[urlParts[2]]
+    }
+
+    if (contentRoute.services && !urlParts[2]) {
+      authService = contentRoute.services.def
+    }
+
+    if (!authService) {
+      throw new CustomError('request Missing', 401) // Unauthorized status code
+    }
+
+    if (authService.title) req.title = authService.title
+
+    if (req.public && !authService.public) {
+      throw new CustomError('public Access denied', 401) // Unauthorized status code
+    }
+
+    if (authService.curl) req.curl = authService.curl
+    req.command = contentRoute.path || authService.command || false
+    req.service = authService.serviceInstance || 'axios'
+    req.transformations = authService.transformations || {}
+    req.param = {}
+    if (authService.parameter) {
+      const params = authService.parameter
+      params.query.map(param => {
+        if (req.query[param]) {
+          req.param[param] = req.query[param]
+        }
+      })
+    }
+    next()
+  } catch (err) {
+    console.log(err)
+    const status = err.status || 500
+    res.status(err.status || 500).json({ status, auth: false, error: err.message })
+  }
 }
